[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/EnemyScenes/Legs/AntLeg.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Bee.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/Bee_1_colored.png" type="Texture" id=3]
[ext_resource path="res://Materials/NoOutline.tres" type="Material" id=4]
[ext_resource path="res://Animations/Hit.tres" type="Animation" id=5]
[ext_resource path="res://Scenes/Weapons/BeeStinger.tscn" type="PackedScene" id=6]
[ext_resource path="res://Materials/OutlineWhite.tres" type="Material" id=7]
[ext_resource path="res://Scenes/Particles/BloodSpray.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Particles/Stun.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 27.5 )

[sub_resource type="Animation" id=6]
resource_name = "AttackIndicator"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1, 1.3, 1.5, 1.9, 2, 2.1, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Legs:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1, 1.3, 1.5, 1.9, 2, 2.1, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Legs:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 357.56

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 20.5 )

[node name="Bee" type="KinematicBody2D" groups=["enemies"]]
pause_mode = 1
z_index = 1
script = ExtResource( 2 )
maxHp = 300.0
timeBetweenAttacksSmall = 5.0
timeBetweenAttacksBig = 7.0
accuracy = 35.0
chaseCooldownSmall = 1.0
chaseCooldownBig = 3.0
walkTimeSmall = 1.0
walkTimeBig = 3.0
stunParts = ExtResource( 9 )
maxLegDist = 42.0
bullet = ExtResource( 6 )
numShots = 4
farthestRangedDistance = 300.0
closestRangedDistance = 200.0
rangedCoolsSmall = 1.375
rangedCoolsBig = 2.25
lungeSpd = 725.0
lungeAtk = 95

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackIndicator = SubResource( 6 )
anims/Hit = ExtResource( 5 )
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Legs" type="Node2D" parent="."]
visible = false
material = ExtResource( 7 )

[node name="Leg" parent="Legs" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( 6, -3 )

[node name="Leg2" parent="Legs" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( 3, 3 )
flipped = false

[node name="Leg3" parent="Legs" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( 8, 23 )

[node name="Leg4" parent="Legs" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( -6, -3 )
flipped = false

[node name="LegUpdaters" type="Node2D" parent="."]
visible = false

[node name="LegUpd" type="Position2D" parent="LegUpdaters"]
position = Vector2( 30, -14 )

[node name="LegUpd2" type="Position2D" parent="LegUpdaters"]
position = Vector2( 30, 18 )

[node name="LegUpd3" type="Position2D" parent="LegUpdaters"]
position = Vector2( -40, -24 )

[node name="LegUpd4" type="Position2D" parent="LegUpdaters"]
position = Vector2( -40, 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.825
one_shot = true

[node name="LungeStart" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="LungeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LungeArea"]
position = Vector2( 0, 2.5 )
shape = SubResource( 7 )

[node name="BloodSpray" parent="." instance=ExtResource( 8 )]
emitting = false
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LungeStart" to="." method="_on_LungeStart_timeout"]
[connection signal="timeout" from="LungeStart" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="LungeArea" to="." method="_on_LungeArea_body_entered"]
